--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@coreui/icons-angular": "~5.0.0",
     "@coreui/utils": "^2.0.2",
     "chart.js": "^4.4.2",
+    "jwt-decode": "^4.0.0",
     "lodash-es": "^4.17.21",
     "ngx-scrollbar": "^13.0.3",
     "rxjs": "~7.8.1",
